docs: get service by id
